--- a/fraud_detection/demo.html
+++ b/fraud_detection/demo.html
@@ -8,7 +8,7 @@
   <h1>Fraud Detection Demo</h1>
   <p>This module includes face verification and focus monitoring during online interviews.</p>
   <p>To test:</p>
-  <pre>python demo.py</pre>
+  <pre>python ./demo.py</pre>
   <p>Face verification requires candidate images. Focus monitoring uses your webcam.</p>
 </body>
 </html>
